src/test/ui/associated-types/point-at-type-on-obligation-failure.stderr
error[E0271]: type mismatch resolving `<Foo2 as Bar2>::Ok == ()`
  --> $DIR/point-at-type-on-obligation-failure.rs:13:5
   |
LL |     type Ok;
   |          -- associated type defined here
...
LL | impl Bar for Foo {
   | ---------------- in this `impl` item
LL |     type Ok = ();
   |     ^^^^^^^^^^^^^ expected u32, found ()
   |
   = note: expected type `u32`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
